--- a/neutronStyle.css
+++ b/neutronStyle.css
@@ -1,8 +1,22 @@
 body {
-  background-color: rgb(41, 175, 0);
+  background-color: rgb(228, 219, 181);
 }
 
 h1 {
-  color: navy;
+  font-family: Arial, Helvetica, sans-serif;
+  border: 2px solid rgb(155, 155, 155);
+  color: rgb(73, 73, 73);
+  margin-left: 20px;
+}
+
+h3 {
+  font-family: Arial, Helvetica, sans-serif;
+  color: rgb(133, 133, 133);
+  margin-left: 20px;
+}
+
+p {
+  font-family: Arial, Helvetica, sans-serif;
+  color: rgb(30, 30, 30);
   margin-left: 20px;
 }
